[package]
name = "mb1_memmap"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = []

[lib]
# You can keep rlib for Rust-kernel use.
# Add staticlib only when you actually want a `.a` artifact you link from C/Makefile.
# crate-type = ["rlib", "staticlib"]
crate-type = ["rlib"]

[dependencies]
color-eyre = "0.6.5"
pretty_assertions = "1.4.1"
rs-test = "0.18"
insta = "1"
proptest = "1"

